--- a/css/main.css
+++ b/css/main.css
@@ -1,4 +1,5 @@
 body {
+    color: #fff;
     margin: auto;
     padding: auto;
 }
@@ -7,15 +8,16 @@ body {
     width: 1210px;
 }
 
-.container header{
-    padding: 13px 130px;
+.container header, .container .menu{
+    padding: 5px 130px;
 }
 
 
 header {
     border: 0px solid;
-    height: 76px;
-    background: url("../i/head.jpg") repeat-x;
+    height: 66px;
+    background-color: #1569b2;
+    /*background: url("../i/head.jpg") repeat-x;*/
 }
 
 .logo {
@@ -30,4 +32,31 @@ header .header-menu {
 header .header-menu li{
 	list-style: none;
 	display: inline;
+}
+
+.line {
+    background-color: #c4da38;
+    height: 9px;
+}
+
+.line-0 {
+    background-color: #186ab2;
+    height: 1px;
+}
+
+.line-1 {
+    background-color: #00305b;
+    height: 1px;
+}
+
+.menu {
+    height: 67px;
+    background-color: #003663;
+}
+
+.menu menu li{
+    background-color: #04264c;
+    height: 47px;
+    margin-left: 5px;
+    border-top-left-radius: 2px;
 }
